fixed various silly errors

--- a/downloads/Makefile
+++ b/downloads/Makefile
@@ -1,18 +1,19 @@
-webRoot=/var/www/html/goblimey
+webRoot=/var/www/html
 
 sourceRoot=..
 
 # The name of this directory, eg "projects/gps".
-nameOfThisDirectory=downloads/$(notdir $(shell pwd))
+nameOfThisDirectory=downloads
 
 # Every generated web page depends on these files.
 includes=${sourceRoot}/leader.m4.html ${sourceRoot}/trailer.m4.html ${sourceRoot}/definitions.m4
 
 
-# The destination for the pages produced, eg /var/www/html/goblimey/projects/grpc.
+# The destination for the pages produced, eg /var/www/html/projects/grpc.
 destination=${webRoot}/${nameOfThisDirectory}
 
 all: ${destination}/index.html
 
 ${destination}/%.html: %.m4.html
+	mkdir -p ${destination}
 	m4 -DsourceRoot=${sourceRoot} $< > $@
